# tauri-react-starting

./: .prettierrc  README.md  env.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/iconfont/: iconfont.css  iconfont.json
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/invoke/: demo.rs  invoke_window.rs  logger.rs  mod.rs  window.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/sql/: mod.rs  sqlite_plugin.rs
src-tauri/src/storage/: error.rs  plugin.rs  store.rs
src-tauri/src/tools/: sys.rs
src-tauri/src/tray/: create_tray.rs  mod.rs
src-tauri/src/window/: config.rs  create_window.rs  manager.rs  mod.rs  setup.rs
src/common/: auth.ts  global-error.ts  index.ts  mount-react-node.ts  system-info.ts
src/common/api/: handle-response.tsx  request.ts
src/common/assets/: images.ts  index.ts
src/common/consts/: consts.ts
src/common/dicts/: dicts.ts  index.ts
src/common/invoke/: index.ts  invoke.ts
src/common/logger/: index.ts  logger.ts
src/common/routes/: auto-routes.ts  index.ts  navigation.ts  route-tools.ts
src/common/sqlite/: index.ts  sqlite.ts
src/common/utils/: base.ts  css.ts  date.ts  debounce.ts  dom.ts  index.ts  object.ts  string.ts  uri.ts
src/common/window/: create-window.ts
src/components/: index.ts
src/components/app-layout/: app-layout.less  app-layout.tsx
src/components/app-router/: app-router.tsx  router-hooks.ts
src/components/app-titlebar/: app-titlebar.less  app-titlebar.tsx  titlebar-menu.tsx
src/components/async-import/: async-import.tsx
src/components/full-screen-loading/: full-screen-loading.less  full-screen-loading.tsx  index.ts
src/components/loading/: loading.less  loading.tsx
src/components/menus/: index.ts
src/components/panel/: panel.less  panel.tsx
src/hooks/: index.ts  use-request.ts  use-ssr-compat.ts  use-theme-media.ts
src/store/: global-store.ts  index.ts  store.ts
src/styles/: clear.less  index.less  theme.dark.less  theme.less  theme.light.less  vars.less
src/styles/atomic/: animation.less  border.less  box-model.less  color.less  css-vars.less  (+7 more)
src/types/: global.d.ts  router.d.ts
(+35 files in other folders)
