[package]
name = "tauri-react-starting"
version = "0.0.0"
description = "A Tauri App"
authors = ["lanten"]
license = ""
repository = ""
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["api-all", "macos-private-api", "system-tray"] }
window-vibrancy = { version = "0.3.2" }
window-shadows = "0.2.1"
os_info = "3.7.0"
once_cell = "1.17.1"
simplelog = "0.12.1"
log = "0.4.17"
time = "0.3.15"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
